--- a/src/gallery-charts-stockindicators/tests/unit/charts-stockindicators.html
+++ b/src/gallery-charts-stockindicators/tests/unit/charts-stockindicators.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Crosshair Tests</title>
+    <title>StockIndicators Chart Tests</title>
 </head>
 <body class="yui3-skin-sam">
 
